[tool.poetry]
name = "dfxfusion"
version = "0.1.0"
description = ""
authors = ["David Muto (pseudomuto) <david.muto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.7.0"
flake8 = "^4.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["apper/*", "lib/*"]
